learning about lengths %

--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
       </nav>
     </header>
     <h1>homepage</h1>
+    <main>
+      <section class="container">
+        <div class="block">
+           
+
+        </div>
+         <div class="block"></div>
+      </section>
+    </main>
   </body>
 </html>
