padding, margins, etc

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
     </header>
     <h1>homepage</h1>
     <main>
-      <section class="container">
-        <div class="block">
-           
-
-        </div>
-         <div class="block"></div>
+     <div class="box-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+       Laboriosam autem in ullam quibusdam quos doloribus exercitationem, recusandae 
+       natus reiciendis repudiandae iste asperiores id debitis ea harum veniam blanditiis
+        dicta voluptatum dolorem ducimus nulla. Exercitationem est soluta delectus saepe
+         reprehenderit itaque iure incidunt ad aperiam at explicabo, cupiditate inventore veritatis nisi.</div>
+     <div class="box-2">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore impedit eum quo quod aliquam facilis quam placeat architecto, aperiam eos distinctio recusandae quis quasi repudiandae animi deserunt, facere ipsum nisi.</p>
+     </div>
+        
       </section>
     </main>
   </body>
